appdir = $(datadir)/applications
icondir = $(datadir)/icons/hicolor/48x48/apps
zshcompletiondir = $(datadir)/zsh/site-functions

app_DATA = lftp.desktop
icon_DATA = lftp-icon.png
zshcompletion_DATA = _lftp
noinst_SCRIPTS = get-all-torrents

EXTRA_DIST = $(app_DATA) $(icon_DATA) $(zshcompletion_DATA) $(noinst_SCRIPTS)
