EXTRA_DIST = _inttypes_h.m4 absolute-header.m4 cxx-dynamic-initializers.m4 error.m4 exitfail.m4 filemode.m4 gnu-source.m4 human.m4 include_next.m4 intmax_t.m4 inttypes-h.m4 lftp.m4 mbrtowc.m4 mbstate_t.m4 mbswidth.m4 modechange.m4 needtrio.m4 pty.m4 quote.m4 quotearg.m4 readline.m4 socklen.m4 ssl.m4 stat-macros.m4 stdbool.m4 stdint_h.m4 strerror_r.m4 strtoimax.m4 strtoull.m4 strtoumax.m4 terminfo.m4 uintmax_t.m4 ulonglong.m4 va_copy.m4 wcwidth.m4 xalloc.m4 xstrtol.m4 xstrtoumax.m4
